tests/errors/test-member-init-bad-member.script

class A
{
  A(int a) : n(a) { }
};                   

//>4:14: error C5: n does not name a data member
